samples/_failures_safe/1761040719_f409e7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0ab99943.c: In function ‘main’:
./samples/SAFE/__tmp_0ab99943.c:186:5: error: expected declaration or statement at end of input
  186 |     for (int i = 0; i < token_count; i++) {
      |     ^~~
./samples/SAFE/__tmp_0ab99943.c:186:5: error: expected declaration or statement at end of input
